--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ directories = "3.0"
 clap = "2"
 serde = { version = "1.0", features = ["derive"] }
 prettytable-rs = { version = "0.8", default-features = false }
+threadpool = "1.0"
+indicatif = "0.15.0"
